--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,11 +24,11 @@
             app:popupTheme="@style/AppTheme">
 
             <TextView
-                android:layout_gravity="center_horizontal"
-                android:textColor="@color/colorWhite"
-                android:text="Judul"
                 android:id="@+id/toolbar_title_list_product"
                 style="@style/TextRegular"
+                android:layout_gravity="center_horizontal"
+                android:text="Judul"
+                android:textColor="@color/colorWhite"
                 android:textSize="20sp" />
 
 
@@ -37,15 +37,376 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="@dimen/margin_space"
         android:id="@+id/rv_trend_categories_more"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/appbar_discount_product"
+        android:layout_margin="@dimen/margin_space"
         android:foregroundGravity="center_horizontal"
-        android:layout_height="0dp"
-        tools:listitem="@layout/item_product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbar_discount_product" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/sh_product_list_trend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appbar_discount_product"
+        android:layout_margin="@dimen/margin_space">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        app:cardCornerRadius="5dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorGray"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/beras" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Beras Cianjur Wangi asa sasa" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="50dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Rp12.000" />
+
+                    <View
+                        style="@style/TextSemiBold"
+                        android:layout_width="70dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        android:textColor="@color/colorLightRed"
+                        tools:text="Rp12.000 /Item" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="75dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Min. 10 Item" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        app:cardCornerRadius="5dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorGray"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/beras" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Beras Cianjur Wangi asa sasa" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="50dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Rp12.000" />
+
+                    <View
+                        style="@style/TextSemiBold"
+                        android:layout_width="70dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        android:textColor="@color/colorLightRed"
+                        tools:text="Rp12.000 /Item" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="75dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Min. 10 Item" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        app:cardCornerRadius="5dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorGray"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/beras" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Beras Cianjur Wangi asa sasa" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="50dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Rp12.000" />
+
+                    <View
+                        style="@style/TextSemiBold"
+                        android:layout_width="70dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        android:textColor="@color/colorLightRed"
+                        tools:text="Rp12.000 /Item" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="75dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Min. 10 Item" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        app:cardCornerRadius="5dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorGray"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/beras" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Beras Cianjur Wangi asa sasa" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="50dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Rp12.000" />
+
+                    <View
+                        style="@style/TextSemiBold"
+                        android:layout_width="70dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        android:textColor="@color/colorLightRed"
+                        tools:text="Rp12.000 /Item" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="75dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Min. 10 Item" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        app:cardCornerRadius="5dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorGray"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/beras" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Beras Cianjur Wangi asa sasa" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="50dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Rp12.000" />
+
+                    <View
+                        style="@style/TextSemiBold"
+                        android:layout_width="70dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        android:textColor="@color/colorLightRed"
+                        tools:text="Rp12.000 /Item" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="75dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Min. 10 Item" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="7dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        app:cardCornerRadius="5dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/colorGray"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/beras" />
+
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Beras Cianjur Wangi asa sasa" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="50dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Rp12.000" />
+
+                    <View
+                        style="@style/TextSemiBold"
+                        android:layout_width="70dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        android:textColor="@color/colorLightRed"
+                        tools:text="Rp12.000 /Item" />
+
+                    <View
+                        style="@style/TextRegular"
+                        android:layout_width="75dp"
+                        android:layout_height="10dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/colorGray"
+                        tools:text="Min. 10 Item" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
+</RelativeLayout>
