--- a/app/src/main/res/layout/item_list_history_purchase.xml
+++ b/app/src/main/res/layout/item_list_history_purchase.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/date_invoice"
@@ -24,6 +24,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/no_invoice"
                 style="@style/TextRegular"
                 android:layout_width="match_parent"
                 android:background="@color/colorWhiteSmoke"
