--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,8 +49,8 @@
                     style="@style/TextSemiBold"
                     android:layout_below="@+id/hallo"
                     android:layout_toEndOf="@+id/logo_toolbar"
-                    tools:text="Silahkan Login"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    tools:text="Silahkan Login" />
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
@@ -566,7 +566,128 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_trend_categories"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/sh_product_trend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="144dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="7dp"
+                        android:orientation="vertical">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="130dp"
+                            app:cardCornerRadius="5dp">
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorGray"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/beras" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Beras Cianjur Wangi asa sasa" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="50dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Rp12.000" />
+
+                        <View
+                            style="@style/TextSemiBold"
+                            android:layout_width="70dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            android:textColor="@color/colorLightRed"
+                            tools:text="Rp12.000 /Item" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="75dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Min. 10 Item" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="144dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="7dp"
+                        android:orientation="vertical">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="130dp"
+                            app:cardCornerRadius="5dp">
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorGray"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/beras" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Beras Cianjur Wangi asa sasa" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="50dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Rp12.000" />
+
+                        <View
+                            style="@style/TextSemiBold"
+                            android:layout_width="70dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            android:textColor="@color/colorLightRed"
+                            tools:text="Rp12.000 /Item" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="75dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Min. 10 Item" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -600,6 +721,126 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="5dp" />
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/sh_product_new"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="144dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="7dp"
+                        android:orientation="vertical">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="130dp"
+                            app:cardCornerRadius="5dp">
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorGray"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/beras" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Beras Cianjur Wangi asa sasa" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="50dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Rp12.000" />
+
+                        <View
+                            style="@style/TextSemiBold"
+                            android:layout_width="70dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            android:textColor="@color/colorLightRed"
+                            tools:text="Rp12.000 /Item" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="75dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Min. 10 Item" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="144dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="7dp"
+                        android:orientation="vertical">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="130dp"
+                            app:cardCornerRadius="5dp">
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorGray"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/beras" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Beras Cianjur Wangi asa sasa" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="50dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Rp12.000" />
+
+                        <View
+                            style="@style/TextSemiBold"
+                            android:layout_width="70dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            android:textColor="@color/colorLightRed"
+                            tools:text="Rp12.000 /Item" />
+
+                        <View
+                            style="@style/TextRegular"
+                            android:layout_width="75dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="5dp"
+                            android:background="@color/colorGray"
+                            tools:text="Min. 10 Item" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
         </LinearLayout>
     </ScrollView>
